fix font-weight on mobile

--- a/frontend/src/assets/scss/_Header.scss
+++ b/frontend/src/assets/scss/_Header.scss
@@ -23,7 +23,7 @@
     opacity: 1;
     font-family: 'Product Sans', Arial, sans-serif;
     font-size: 22px;
-    font-weight: lighter;
+    font-weight: 400;
     line-height: 24px;
     vertical-align: middle;
   }
