--- a/frontend/src/assets/scss/_Sidebar.scss
+++ b/frontend/src/assets/scss/_Sidebar.scss
@@ -26,8 +26,8 @@
         white-space: normal;
         opacity: 1;
         font-family: 'Product Sans', Arial, sans-serif;
+        font-weight: 400;
         font-size: 22px;
-        font-weight: lighter;
         line-height: 24px;
         vertical-align: middle;
       }
